<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:paddingTop="4dp">

    <view
        class="com.fyp.pj.widgets.MenuBar$BarItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:text="@string/menu_home" />

    <view
        class="com.fyp.pj.widgets.MenuBar$BarItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:text="@string/menu_facility" />

    <view
        class="com.fyp.pj.widgets.MenuBar$BarItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:text="@string/menu_book" />

    <view
        class="com.fyp.pj.widgets.MenuBar$BarItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:text="@string/menu_mybook" />

</LinearLayout>