<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/tvPageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/title_Booking"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPageTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="30dp">

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:gravity="center_vertical"
                        android:text="@string/book_distract"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="0.5"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/spDistract"
                        app:layout_constraintTop_toTopOf="parent" />


                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/spDistract"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="-"
                        app:arrowTint="@color/theme1"
                        app:layout_constraintBottom_toBottomOf="@+id/tv2"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@+id/tv2"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv2"
                        app:popupTextAlignment="start" />


                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/book_type"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="0.5"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/spType"
                        app:layout_constraintTop_toBottomOf="@+id/tv2" />


                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/spType"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:arrowTint="@color/theme1"
                        app:layout_constraintBottom_toBottomOf="@+id/tv3"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@+id/tv3"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv3"
                        app:popupTextAlignment="start" />


                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/book_date"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="0.5"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/spType"
                        app:layout_constraintTop_toBottomOf="@+id/tv3" />


                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center_vertical"
                        android:text="@string/book_time"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="0.5"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/spType"
                        app:layout_constraintTop_toBottomOf="@+id/tvDate" />


                    <org.angmarch.views.NiceSpinner
                        android:id="@+id/spTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:arrowTint="@color/theme1"
                        app:layout_constraintBottom_toBottomOf="@+id/tv4"
                        app:layout_constraintHorizontal_chainStyle="spread_inside"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@+id/tv4"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/tv4"
                        app:popupTextAlignment="start" />

                    <TextView
                        android:id="@+id/tvClickableDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="-"
                        app:layout_constraintBottom_toBottomOf="@+id/tvDate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvDate"
                        app:layout_constraintTop_toTopOf="@+id/tvDate" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="30dp"
            android:background="@color/theme1"
            android:text="@string/btn_Submit"
            android:textColor="@color/zxing_status_text"
            app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>