<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_Facility"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".3"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp">


                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/book_distract"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/spDistract"
                    app:layout_constraintTop_toTopOf="parent" />


                <org.angmarch.views.NiceSpinner
                    android:id="@+id/spDistract"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    app:arrowTint="@color/theme1"
                    app:layout_constraintBottom_toBottomOf="@+id/tv2"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toRightOf="@+id/tv2"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv2"
                    app:popupTextAlignment="start" />


                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/book_type"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/spType"
                    app:layout_constraintTop_toBottomOf="@+id/tv2" />


                <org.angmarch.views.NiceSpinner
                    android:id="@+id/spType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:arrowTint="@color/theme1"
                    app:layout_constraintBottom_toBottomOf="@+id/tv3"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toRightOf="@+id/tv3"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv3"
                    app:popupTextAlignment="start" />

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:text="@string/facility_search"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="0.5"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/etSearch"
                    app:layout_constraintTop_toBottomOf="@+id/tv3" />

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:backgroundTint="@android:color/holo_red_light"
                    app:layout_constraintBottom_toBottomOf="@+id/tv4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintStart_toEndOf="@+id/tv4"
                    app:layout_constraintTop_toTopOf="@+id/tv4" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginTop="16dp"
                    android:background="@color/theme1"
                    android:text="@string/btn_Submit"
                    android:textColor="@color/zxing_status_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rlFacility"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>